# mcp-crash-course

./: D365_SO_agent_format.py  D365_mcp_client_server.py  Final_D365_PO_formatted_mcp.py  Test_d365_client_server.py  main.py  pyproject.toml  test.py
servers/: langchain_client.py  weather_server.py
